manifests/0004-canary.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entry-envoy
  namespace: gitops-demo-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entry-envoy
  template:
    metadata:
      annotations:
        envDescriptor: '{"apps":[{"name":"home","version":"189e701b29d9e050767aad9f439f3172bd73c3a1"},{"name":"kitchen","version":"189e701b29d9e050767aad9f439f3172bd73c3a1"},{"name":"livingroom","version":"189e701b29d9e050767aad9f439f3172bd73c3a1"}],"latestVersion":"189e701b29d9e050767aad9f439f3172bd73c3a1"}'
      labels:
        app: entry-envoy
    spec:
      containers:
        - env:
            - name: SERVICE_VERSION
              value: 189e701b29d9e050767aad9f439f3172bd73c3a1
          image: ghcr.io/dgital/gitops-demo-entry-envoy:sha-8e29ef5102b943619948c4ae3aa7688628a0f514
          name: entry-envoy
          ports:
            - containerPort: 10000
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
  name: gitops-demo-gateway
  namespace: gitops-demo-prod
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
