manifests/0002-kitchen.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kitchen
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  name: kitchen-189e701b29d9e050767aad9f439f3172bd73c3a1
  namespace: gitops-demo-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchen
      version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  template:
    metadata:
      labels:
        app: kitchen
        version: 189e701b29d9e050767aad9f439f3172bd73c3a1
    spec:
      containers:
        - env: []
          image: ghcr.io/dgital/gitops-demo-kitchen:sha-189e701b29d9e050767aad9f439f3172bd73c3a1
          name: kitchen-189e701b29d9e050767aad9f439f3172bd73c3a1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kitchen
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  name: kitchen-189e701b29d9e050767aad9f439f3172bd73c3a1
  namespace: gitops-demo-qa
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: kitchen
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kitchen
  name: kitchen
  namespace: gitops-demo-qa
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: kitchen
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kitchen
  namespace: gitops-demo-qa
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: kitchen
      port: 80
  rules:
    - backendRefs:
        - name: kitchen-189e701b29d9e050767aad9f439f3172bd73c3a1
          port: 80
      matches:
        - headers:
            - name: x-service-version
              type: Exact
              value: 189e701b29d9e050767aad9f439f3172bd73c3a1
