manifests/0002-livingroom.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: livingroom
    version: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
  name: livingroom-0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
  namespace: gitops-demo-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livingroom
      version: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
  template:
    metadata:
      labels:
        app: livingroom
        version: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
    spec:
      containers:
        - env: []
          image: ghcr.io/dgital/gitops-demo-livingroom:sha-0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
          name: livingroom-0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: livingroom
    version: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
  name: livingroom-0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
  namespace: gitops-demo-qa
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: livingroom
    version: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: livingroom
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  name: livingroom-189e701b29d9e050767aad9f439f3172bd73c3a1
  namespace: gitops-demo-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livingroom
      version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  template:
    metadata:
      labels:
        app: livingroom
        version: 189e701b29d9e050767aad9f439f3172bd73c3a1
    spec:
      containers:
        - env: []
          image: ghcr.io/dgital/gitops-demo-livingroom:sha-189e701b29d9e050767aad9f439f3172bd73c3a1
          name: livingroom-189e701b29d9e050767aad9f439f3172bd73c3a1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: livingroom
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
  name: livingroom-189e701b29d9e050767aad9f439f3172bd73c3a1
  namespace: gitops-demo-qa
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: livingroom
    version: 189e701b29d9e050767aad9f439f3172bd73c3a1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: livingroom
  name: livingroom
  namespace: gitops-demo-qa
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: livingroom
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livingroom
  namespace: gitops-demo-qa
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: livingroom
      port: 80
  rules:
    - backendRefs:
        - name: livingroom-0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
          port: 80
      matches:
        - headers:
            - name: x-service-version
              type: Exact
              value: 0c9be09455bf69880f6048b8fd4b6cfa8eaef26d
    - backendRefs:
        - name: livingroom-189e701b29d9e050767aad9f439f3172bd73c3a1
          port: 80
